fix(instruction): empty placeholder wrapping causes overflow

--- a/src/styles/components/InstructionBlock.module.scss
+++ b/src/styles/components/InstructionBlock.module.scss
@@ -35,6 +35,9 @@
       color: #888888 !important;
       text-decoration: none;
       cursor: text;
+      white-space: nowrap;
+      overflow: hidden;
+      text-overflow: ellipsis;
     }
 
     .text {
